--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,18 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="false">
-        <domain includeSubdomains="true">firebaseappcheck.googleapis.com</domain>
-        <domain includeSubdomains="true">firebase.googleapis.com</domain>
-        <domain includeSubdomains="true">firebaseauth.googleapis.com</domain>
-        <domain includeSubdomains="true">securetoken.googleapis.com</domain>
-        <domain includeSubdomains="true">firestore.googleapis.com</domain>
-        <domain includeSubdomains="true">firebasestorage.googleapis.com</domain>
+    <domain-config cleartextTrafficPermitted="true">
+        <!-- Allow cleartext traffic for development -->
+        <domain includeSubdomains="true">localhost</domain>
+        <domain includeSubdomains="true">10.0.2.2</domain>
+        <domain includeSubdomains="true">192.168.1.1</domain>
     </domain-config>
 
-    <!-- Allow cleartext traffic for debug builds -->
-    <base-config cleartextTrafficPermitted="true">
+    <base-config cleartextTrafficPermitted="false">
+        <trust-anchors>
+            <!-- Trust system certificates -->
+            <certificates src="system"/>
+            <!-- Trust user-added certificates in debug builds -->
+            <certificates src="user"/>
+        </trust-anchors>
+    </base-config>
+
+    <!-- Firebase and Google services -->
+    <domain-config>
+        <domain includeSubdomains="true">firebase.googleapis.com</domain>
+        <domain includeSubdomains="true">firebaseapp.com</domain>
+        <domain includeSubdomains="true">googleapis.com</domain>
+        <domain includeSubdomains="true">google.com</domain>
         <trust-anchors>
             <certificates src="system"/>
         </trust-anchors>
-    </base-config>
+    </domain-config>
 </network-security-config>
